--- a/dev-ruby/ruby-gettext/ChangeLog
+++ b/dev-ruby/ruby-gettext/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.87 2012/10/25 21:08:53 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.88 2012/10/28 13:10:23 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  ruby-gettext-2.1.0_p20100728-r3.ebuild, ruby-gettext-2.2.1.ebuild:
+  Add ~alpha/~ia64/~sparc
 
   25 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   ruby-gettext-2.2.1.ebuild:
