--- a/virtual/ruby-threads/ChangeLog
+++ b/virtual/ruby-threads/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/ruby-threads
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-threads/ChangeLog,v 1.17 2012/10/27 17:57:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-threads/ChangeLog,v 1.18 2012/10/28 13:44:49 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
+  Add ~alpha
 
   27 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
   s390/sh stable wrt #411507
