--- a/dev-util/comparator/ChangeLog
+++ b/dev-util/comparator/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/comparator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/comparator/ChangeLog,v 1.18 2012/01/03 04:03:10 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/comparator/ChangeLog,v 1.19 2012/10/28 14:05:23 pacho Exp $
+
+  28 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer as talked with him.
 
 *comparator-2.8 (03 Jan 2012)
 
@@ -67,4 +70,3 @@
 
   09 Sep 2003; Joshua Kinard <kumba@gentoo.org> comparator-1.0.ebuild:
   Initial revision of comparator
-
