--- a/dev-util/comparator/ChangeLog
+++ b/dev-util/comparator/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/comparator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/comparator/ChangeLog,v 1.19 2012/10/28 14:05:23 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/comparator/ChangeLog,v 1.20 2012/10/28 15:11:13 blueness Exp $
+
+  28 Oct 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
+  Added myself as maintainer
 
   28 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer as talked with him.
