--- a/media-libs/grilo/ChangeLog
+++ b/media-libs/grilo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/grilo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/grilo/ChangeLog,v 1.11 2012/10/28 15:10:36 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/grilo/ChangeLog,v 1.12 2012/10/28 15:13:51 eva Exp $
+
+  28 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> grilo-0.2.2.ebuild:
+  Fix invalid DEPEND.
 
 *grilo-0.2.2 (28 Oct 2012)
 
