--- a/dev-python/pygobject/ChangeLog
+++ b/dev-python/pygobject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygobject
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.179 2012/10/28 15:43:58 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.180 2012/10/28 15:44:39 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> pygobject-2.28.6-r52.ebuild:
+  ia64/sh/sparc stable wrt #427544
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> pygobject-3.2.2.ebuild:
   ia64/sh/sparc stable wrt #427544
