--- a/gnome-base/gvfs/ChangeLog
+++ b/gnome-base/gvfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.190 2012/10/16 04:30:59 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.191 2012/10/28 15:51:56 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> gvfs-1.12.3.ebuild:
+  ia64/sh/sparc stable wrt #427544
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gvfs-1.12.3.ebuild:
   stable ppc, bug #427544
