--- a/dev-python/PyQt4/ChangeLog
+++ b/dev-python/PyQt4/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/PyQt4
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.199 2012/10/05 20:25:54 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.200 2012/10/28 15:59:18 hwoarang Exp $
+
+  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.8.4.ebuild,
+  -PyQt4-4.9.1.ebuild:
+  Remove old
 
 *PyQt4-4.9.5 (05 Oct 2012)
 
