--- a/dev-ruby/yard/ChangeLog
+++ b/dev-ruby/yard/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/yard
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.34 2012/10/25 21:09:49 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.35 2012/10/28 16:10:38 jer Exp $
+
+  28 Oct 2012; Jeroen Roovers <jer@gentoo.org> yard-0.8.3.ebuild:
+  Marked ~hppa (bug #431290).
 
   25 Oct 2012; Anthony G. Basile <blueness@gentoo.org> yard-0.8.2.1.ebuild:
   keyword ~ppc64, bug #431290
