--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7069 2012/10/27 20:38:23 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7070 2012/10/28 16:13:31 slyfox Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  28 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org> package.mask:
+  Masked for removal dev-haskell/hdoc.
 
   27 Oct 2012; Ulrich Müller <ulm@gentoo.org> updates/4Q-2012:
   Package move app-doc/openmotif-manual to app-doc/motif-reference-manual,
