--- a/dev-ruby/highline/ChangeLog
+++ b/dev-ruby/highline/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-ruby/highline
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.62 2012/10/28 17:18:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.63 2012/10/28 17:41:55 armin76 Exp $
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> highline-1.6.1.ebuild,
   highline-1.6.8.ebuild, highline-1.6.13.ebuild:
-  Add ~alpha, alpha stable
+  Add ~alpha, alpha/ia64/sparc stable wrt #431332
 
   16 Aug 2012; Johannes Huber <johu@gentoo.org> highline-1.6.8.ebuild:
   Stable for x86, wrt bug #431332
