--- a/dev-ruby/nokogiri/ChangeLog
+++ b/dev-ruby/nokogiri/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/nokogiri
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.78 2012/10/28 12:00:39 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.79 2012/10/28 17:46:30 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> nokogiri-1.4.4-r1.ebuild,
+  nokogiri-1.5.2.ebuild, nokogiri-1.5.5.ebuild:
+  alpha stable, add ~alpha
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> nokogiri-1.5.2.ebuild:
   ia64/sparc stable wrt #423071
