--- a/dev-ruby/fast_xs/ChangeLog
+++ b/dev-ruby/fast_xs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/fast_xs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_xs/ChangeLog,v 1.14 2012/09/27 10:23:45 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_xs/ChangeLog,v 1.15 2012/10/28 18:10:56 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> fast_xs-0.8.0.ebuild:
+  Add ~alpha/~ia64/~sparc wrt #405757
 
   27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> fast_xs-0.8.0.ebuild:
   Keyword ~ppc wrt #405757
