--- a/dev-ruby/fast_xs/ChangeLog
+++ b/dev-ruby/fast_xs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/fast_xs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_xs/ChangeLog,v 1.15 2012/10/28 18:10:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_xs/ChangeLog,v 1.16 2012/10/28 18:13:38 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> fast_xs-0.8.0.ebuild:
+  Add ~alpha
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> fast_xs-0.8.0.ebuild:
   Add ~alpha/~ia64/~sparc wrt #405757
