--- a/dev-util/cucumber/ChangeLog
+++ b/dev-util/cucumber/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cucumber
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.54 2012/10/28 17:24:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.55 2012/10/28 18:18:57 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> cucumber-1.1.4.ebuild:
+  Add ~alpha/~ia64/~sparc wrt #417573
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> cucumber-0.7.3-r1.ebuild:
   Add ~alpha
