--- a/dev-ruby/ruby-bsearch/ChangeLog
+++ b/dev-ruby/ruby-bsearch/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-bsearch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ChangeLog,v 1.30 2012/09/18 09:22:03 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ChangeLog,v 1.31 2012/10/28 18:21:45 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-bsearch-1.5-r3.ebuild:
+  alpha/ia64/sparc stable wrt #435180
 
   18 Sep 2012; Johannes Huber <johu@gentoo.org> ruby-bsearch-1.5-r3.ebuild:
   Stable for x86, wrt bug #435180
