--- a/dev-ruby/term-ansicolor/ChangeLog
+++ b/dev-ruby/term-ansicolor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/term-ansicolor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.30 2012/10/28 17:22:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.31 2012/10/28 18:34:02 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> term-ansicolor-1.0.7.ebuild:
+  alpha/ia64/sparc stable wrt #437040
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
   term-ansicolor-1.0.5-r1.ebuild, term-ansicolor-1.0.7.ebuild:
