--- a/x11-libs/vte/ChangeLog
+++ b/x11-libs/vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.346 2012/10/28 16:37:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.347 2012/10/28 18:36:31 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> vte-0.28.2-r204.ebuild:
+  ia64/sh/sparc stable wrt #427802
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> vte-0.32.2.ebuild:
   ia64/sh/sparc stable wrt #427544
