--- a/net-irc/irssi/ChangeLog
+++ b/net-irc/irssi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.172 2012/09/29 11:04:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.173 2012/10/28 19:10:54 blueness Exp $
+
+  28 Oct 2012; Anthony G. Basile <blueness@gentoo.org> irssi-0.8.15-r1.ebuild:
+  stable ppc ppc64, bug #439958
 
   29 Sep 2012; Agostino Sarubbo <ago@gentoo.org> irssi-0.8.15-r1.ebuild,
   irssi-9999.ebuild:
