--- a/dev-ruby/ruby-bsearch/ChangeLog
+++ b/dev-ruby/ruby-bsearch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-bsearch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ChangeLog,v 1.31 2012/10/28 18:21:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bsearch/ChangeLog,v 1.32 2012/10/28 19:14:25 blueness Exp $
+
+  28 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  ruby-bsearch-1.5-r3.ebuild:
+  stable ppc ppc64, bug #435180
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-bsearch-1.5-r3.ebuild:
   alpha/ia64/sparc stable wrt #435180
