--- a/net-irc/irssi/ChangeLog
+++ b/net-irc/irssi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.174 2012/10/28 19:27:03 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.175 2012/10/28 19:27:49 ago Exp $
+
+  28 Oct 2012; Agostino Sarubbo <ago@gentoo.org> irssi-0.8.15-r1.ebuild:
+  Stable for x86, wrt bug #439958
 
   28 Oct 2012; Agostino Sarubbo <ago@gentoo.org> irssi-0.8.15-r1.ebuild:
   Stable for amd64, wrt bug #439958
