--- a/dev-ruby/ffi/ChangeLog
+++ b/dev-ruby/ffi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ffi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ChangeLog,v 1.38 2012/10/28 17:17:51 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ChangeLog,v 1.39 2012/10/28 19:32:11 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ffi-1.0.9.ebuild:
+  alpha stable
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ffi-1.0.9.ebuild,
   ffi-1.0.11.ebuild, ffi-1.1.4.ebuild, ffi-1.1.5.ebuild:
