--- a/gnome-base/gvfs/ChangeLog
+++ b/gnome-base/gvfs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.191 2012/10/28 15:51:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.192 2012/10/28 21:55:05 eva Exp $
+
+*gvfs-1.14.1 (28 Oct 2012)
+
+  28 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-1.14.1.ebuild:
+  Version bump. Session dbus stop fix, fuse/udisks2/gphoto2 fixes.
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> gvfs-1.12.3.ebuild:
   ia64/sh/sparc stable wrt #427544
