--- a/net-p2p/bitcoind/ChangeLog
+++ b/net-p2p/bitcoind/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for net-p2p/bitcoind
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.47 2012/10/21 00:03:53 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.48 2012/10/29 01:31:05 blueness Exp $
+
+*bitcoind-0.4.8_rc4 (29 Oct 2012)
+*bitcoind-0.5.7_rc4 (29 Oct 2012)
+*bitcoind-0.7.1 (29 Oct 2012)
+*bitcoind-0.6.4_rc4 (29 Oct 2012)
+*bitcoind-0.6.0.10_rc4 (29 Oct 2012)
+
+  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +bitcoind-0.4.8_rc4.ebuild, +bitcoind-0.5.7_rc4.ebuild,
+  +bitcoind-0.6.0.10_rc4.ebuild, +bitcoind-0.6.4_rc4.ebuild,
+  +bitcoind-0.7.1.ebuild:
+  Version bumps, bug #435216
 
   21 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bitcoind-0.6.3.ebuild:
   stable arm, bug #429188
