--- a/net-p2p/bitcoind/ChangeLog
+++ b/net-p2p/bitcoind/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/bitcoind
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.48 2012/10/29 01:31:05 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.49 2012/10/29 01:46:15 blueness Exp $
+
+  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bitcoind-0.6.3.ebuild,
+  bitcoind-0.6.4_rc3.ebuild, bitcoind-0.7.0.ebuild:
+  Workaround for bug #440034
 
 *bitcoind-0.4.8_rc4 (29 Oct 2012)
 *bitcoind-0.5.7_rc4 (29 Oct 2012)
