--- a/net-misc/dhcpcd/ChangeLog
+++ b/net-misc/dhcpcd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcpcd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.336 2012/10/28 16:23:23 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.337 2012/10/29 02:00:38 blueness Exp $
+
+  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dhcpcd-5.6.2.ebuild:
+  stable arm ppc ppc64, bug #439926
 
   28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> dhcpcd-5.6.2.ebuild:
   Stable on amd64 wrt bug #439926
