--- a/x11-misc/slock/ChangeLog
+++ b/x11-misc/slock/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/slock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/slock/ChangeLog,v 1.36 2012/10/09 11:41:22 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/slock/ChangeLog,v 1.37 2012/10/29 04:32:45 jer Exp $
+
+*slock-1.1 (29 Oct 2012)
+
+  29 Oct 2012; Jeroen Roovers <jer@gentoo.org> +slock-1.1.ebuild:
+  Version bump. Verbose build output.
 
   09 Oct 2012;  <naota@gentoo.org> slock-1.0.ebuild:
   Drop -HHAVE_SHADOW_H on FreeBSD and keyword. #233717
