--- a/profiles/arch/powerpc/ChangeLog
+++ b/profiles/arch/powerpc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo/PPC profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.189 2012/10/07 02:31:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.190 2012/10/29 07:10:21 cardoe Exp $
+
+  29 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +package.use,
+  +ppc64/package.use:
+  Add package.use so we can enable the native arch as the default qemu target
+  for bug #437788
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> package.use.mask:
   remove net-libs/webkit-gtk[geoloc,webkit2] masking since app-misc/geoclue and
