--- a/app-misc/ttysnoop/ChangeLog
+++ b/app-misc/ttysnoop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/ttysnoop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ttysnoop/ChangeLog,v 1.4 2012/10/21 14:11:32 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ttysnoop/ChangeLog,v 1.5 2012/10/29 08:33:47 pinkbyte Exp $
+
+  29 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ttysnoop-0.12d.ebuild,
+  files/ttysnoop-makefile.patch:
+  Fix makefile patch, cosmetic fixes in ebuild
 
   21 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Assign myself as a maintainer, remove previous maintainer by his request
