--- a/app-misc/ttysnoop/ChangeLog
+++ b/app-misc/ttysnoop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/ttysnoop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ttysnoop/ChangeLog,v 1.5 2012/10/29 08:33:47 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ttysnoop/ChangeLog,v 1.6 2012/10/29 09:01:44 pinkbyte Exp $
+
+  29 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ttysnoop-0.12d.ebuild:
+  Create directory for socket files in src_install, keyword ~amd64
 
   29 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ttysnoop-0.12d.ebuild,
   files/ttysnoop-makefile.patch:
