--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.478 2012/10/29 09:47:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.479 2012/10/29 09:49:54 mgorny Exp $
+
+  29 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
+  Use find instead of hard-coded executable locations list when linking the
+  wrapper.
 
   29 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
   Use new python-r1 functions.
