--- a/net-misc/shigofumi/ChangeLog
+++ b/net-misc/shigofumi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/shigofumi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/shigofumi/ChangeLog,v 1.6 2012/05/05 03:20:42 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/shigofumi/ChangeLog,v 1.7 2012/10/29 11:16:28 scarabeus Exp $
+
+*shigofumi-0.2 (29 Oct 2012)
+
+  29 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +shigofumi-0.2.ebuild,
+  -shigofumi-0.1.ebuild, shigofumi-9999.ebuild:
+  Version bump. Punt older.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> shigofumi-0.1.ebuild,
   shigofumi-9999.ebuild:
@@ -26,4 +32,3 @@
   +shigofumi-0.1.ebuild, +shigofumi-9999.ebuild, +metadata.xml:
   Initial commit of shigofumi, ISDS client. Thx to Petr Pisar for the
   initial ebuild.
-
